--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -180,8 +180,15 @@ h3
     :width 220px
 
     #leader
-      :padding-bottom 20px
+      :padding 20px
+      :margin-bottom 20px
       :text-align center
+      :background-color #EEEEEE
+      :border 1px solid #999999
+
+      h3
+        :padding 0
+        :margin 0
 
     #counts
       label
