git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@166 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -119,6 +119,10 @@ h3
       :padding 0
       :margin-bottom 5px
 
+  .filter
+    a.clear
+      :font-size 85%
+
   .pagination
     :padding-top 10px
 
