--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -2,11 +2,14 @@
 
 - if @games.length > 0
   - if @filter
-    %p
+    %p.filter
       - if @filter.length > 1
         = 'Filter by <b>{first}</b> and <b>{second}</b>'[:filter_by_two, @filter[0].display_name, @filter[1].display_name]
       - else
-        = 'Filter by <b>{first}</b></b>'[:filter_by_one, @filter[0].display_name]
+        = 'Filter by <b>{first}</b>'[:filter_by_one, @filter[0].display_name]
+
+      - if @filter.length > 1
+        = link_to 'Clear filter', games_path, :class => 'clear'
 
   #games
     %table.list
