git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@172 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -119,6 +119,9 @@ h3
       :padding 0
       :margin-bottom 5px
 
+    .score
+      :text-align center
+
   .filter
     a.clear
       :font-size 85%
@@ -177,6 +180,10 @@ h3
       :text-align right
 
   img.team
+    :position relative
+    :top 2px
+
+  img.winner
     :position relative
     :top 2px
 
