--- a/app/views/games/_game_columns.haml
+++ b/app/views/games/_game_columns.haml
@@ -2,7 +2,17 @@
   = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.first.team_ids)
   = render :partial => 'games/members', :locals => { :team => game.teams.first }
 
-%td.score= game.teams.collect(&:score).join(' - ')
+%td.score
+  - if game.teams.first.score > game.teams.last.score
+    = image_tag('icons/medal_gold_2.png', :class => 'winner')
+  - else
+    .loser &nbsp;
+  
+  = game.teams.collect(&:score).join(' - ')
+  - if game.teams.last.score > game.teams.first.score
+    = image_tag('icons/medal_gold_2.png', :class => 'winner')
+  - else
+    .loser
 
 %td.members
   = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.last.team_ids)
