--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -14,7 +14,7 @@
     %table.list
       %tr
         %th= 'Team one'[]
-        %th= 'Score'[]
+        %th.score= 'Score'[]
         %th= 'Team two'[]
         %th= 'Created'[]
         %th= '&nbsp';
