--- a/app/views/games/_game_columns.haml
+++ b/app/views/games/_game_columns.haml
@@ -6,13 +6,13 @@
   - if game.teams.first.score > game.teams.last.score
     = image_tag('icons/medal_gold_2.png', :class => 'winner')
   - else
-    .loser &nbsp;
+    = image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
   
   = game.teams.collect(&:score).join(' - ')
   - if game.teams.last.score > game.teams.first.score
     = image_tag('icons/medal_gold_2.png', :class => 'winner')
   - else
-    .loser
+    = image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
 
 %td.members
   = link_to image_tag('icons/sport_soccer.png', :class => 'team', :alt => "Show this team's games"[]), games_path(:filter => game.teams.last.team_ids)
