--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -128,6 +128,7 @@ h3
 
   .pagination
     :padding-top 10px
+    :padding-bottom 10px
 
   .game
     label
@@ -204,6 +205,13 @@ h3
     #counts
       label
         :font-weight bold
+
+  a.rss
+    :text-decoration none
+
+    img
+      :position relative
+      :top 2px
 
 #ft
   :background-color #EEEEEE
