--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -31,7 +31,7 @@
 
   .pagination= will_paginate @games
 
-  = link_to 'RSS feed'[] + ' ' + image_tag('rss.gif'), formatted_games_url(:rss), :class => 'rss'
+  = link_to 'RSS feed'[] + ' ' + image_tag('rss.gif'), formatted_games_url(:rss, :filter => params[:filter]), :class => 'rss'
         
 - content_for :sidebar do
   - if logged_in?
