--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -31,10 +31,9 @@
 
   .pagination= will_paginate @games
 
-  - if params[:filter].blank?
-    = link_to 'RSS feed'[] + ' ' + image_tag('rss.gif'), formatted_games_url(:rss), :class => 'rss'
-  - else
-    = link_to 'RSS feed'[] + ' ' + image_tag('rss.gif'), formatted_games_url(:rss, :filter => params[:filter]), :class => 'rss'
+  = link_to 'RSS feed (all games)'[] + ' ' + image_tag('rss.gif'), formatted_games_url(:rss), :class => 'rss'
+  - unless params[:filter].blank?
+    = link_to 'RSS feed (filtered)'[] + ' ' + image_tag('rss.gif'), formatted_games_url(:rss, :filter => params[:filter]), :class => 'rss'
         
 - content_for :sidebar do
   - if logged_in?
@@ -71,5 +70,9 @@
     = 'Login to add a game.'[]
 
 - content_for :head do
-  = auto_discovery_link_tag :atom, formatted_games_url(:atom)
-  = auto_discovery_link_tag :rss, formatted_games_url(:rss)
+  = auto_discovery_link_tag :atom, formatted_games_url(:atom), :title => 'All games'[]
+  = auto_discovery_link_tag :rss, formatted_games_url(:rss), :title => 'All games'[]
+
+  - unless params[:filter].blank?
+    = auto_discovery_link_tag :atom, formatted_games_url(:atom, :filter => params[:filter]), :title => 'Filtered'[]
+    = auto_discovery_link_tag :rss, formatted_games_url(:rss, :filter => params[:filter]), :title => 'Filtered'[]
