git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@190 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -59,3 +59,10 @@
       %p
         %label= 'Goals scored'[] + ':'
         = @goals_scored
+
+  - if logged_in?
+    - cache(dashboard_path + '_new_game') do
+      = render :partial => 'games/form'
+  - else
+    = 'Login to add a game.'[]
+
