--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -191,6 +191,16 @@ h3
   #sidebar
     :width 220px
 
+    h2
+      :margin 0
+      :padding 0
+      :font-size 110%
+      :display block
+      :padding 5px
+      :background-color #EEEEEE
+      :border-bottom 1px solid #999999
+      :margin-bottom 5px
+
     #leader
       :padding 20px
       :margin-bottom 20px
