--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -140,6 +140,15 @@ h3 {
     top: 2px; }
   #bd #sidebar {
     width: 220px; }
+    #bd #sidebar h2 {
+      margin: 0;
+      padding: 0;
+      font-size: 110%;
+      display: block;
+      padding: 5px;
+      background-color: #EEEEEE;
+      border-bottom: 1px solid #999999;
+      margin-bottom: 5px; }
     #bd #sidebar #leader {
       padding: 20px;
       margin-bottom: 20px;
