--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -5,19 +5,21 @@ table
   :margin 0
 
 #hd
-  :background-color #DDDDDD
+  :background-color #3399CC
   
   h1
     :margin 0
-    :padding 20px
-    
-    a
-      :text-decoration none
-      :color #000000
+    :padding 21px
+    :padding-top 14px
+    :padding-bottom 12px
    
   #links
     :float right
-    :padding 20px
+    :padding 21px
+    :color #FFFFFF
+
+    a
+      :color #FFFFFF
 
     #user
       :display inline
@@ -27,24 +29,31 @@ table
       :display inline
     
   ul#menu
+    :display block
+    :background-color #77BBDD
     :margin 0
-    :border-bottom 1px solid #000000
+    :border-top 1px solid #FFFFFF
+    :padding 21px
+    :padding-top 13px
+    :padding-bottom 3px
+    :border-bottom 1px solid #77BBDD
     :list-style-type none
-    :padding 3px 20px 3px 20px
     
     li
       :display inline
       
       a
         :padding 3px 4px
-        :border 1px solid #000000
-        :background-color #EEEEEE
+        :padding-left 10px
+        :padding-right 10px
+        :background-color #3399CC
         :border-bottom none
         :text-decoration none
-        :color #000000
+        :color #FFFFFF
         
         &:hover
           :background-color #FFFFFF
+          :color #7C7C7C
 
     li.current
       :border-bottom 1px solid #FFFFFF
@@ -55,6 +64,7 @@ table
         :position relative
         :top 1px
         :padding-top 4px
+        :color #7C7C7C
       
 h2#page_title
   :display none
@@ -68,6 +78,10 @@ h3
 #bd
   :padding-top 20px
   :padding-bottom 20px
+  :padding-left 20px
+  :padding-right 20px
+  :border 1px solid #77BBDD
+  :border-top 0px
 
   #messages
     :border 1px solid #999999
@@ -99,9 +113,10 @@ h3
 
     th
       :border 0
-      :border-bottom 1px solid #000000
-      :background-color #DDDDDD
+      :border-bottom 1px solid #3399CC
+      :background-color #77BBDD
       :padding 3px
+      :color #FFFFFF
 
     td
       :border 0
@@ -197,9 +212,10 @@ h3
       :font-size 110%
       :display block
       :padding 5px
-      :background-color #EEEEEE
-      :border-bottom 1px solid #999999
+      :background-color #77BBDD
+      :border-bottom 1px solid #3399CC
       :margin-bottom 5px
+      :color #FFFFFF
 
     #leader
       :padding 20px
@@ -224,12 +240,15 @@ h3
       :top 3px
 
 #ft
-  :background-color #EEEEEE
-  :border-top 1px solid #000000
+  :color #999999
   :text-align center
+  :font-size 85%
+  
+  a
+    :color #999999
 
   .content
-    :padding 10px
+    :padding 5px
   
 input#openid_url
   :background white url(/images/openid.gif) no-repeat scroll 0pt 50%
