git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@201 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -199,3 +199,6 @@ input#openid_url {
   clear: both; }
   .clear hr {
     display: none; }
+
+.yui-t5 #yui-main .yui-b {
+  margin-right: 240px; }
