git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@202 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -50,6 +50,7 @@ table
         :border-bottom none
         :text-decoration none
         :color #FFFFFF
+        :font-weight bold
         
         &:hover
           :background-color #FFFFFF
