--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -84,6 +84,9 @@ h3
   :border 1px solid #77BBDD
   :border-top 0px
 
+  h3.noobs
+    :padding-top 10px
+
   #messages
     :border 1px solid #999999
     :background-color #EEEEEE
