--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -72,6 +72,8 @@ h3 {
   padding-right: 20px;
   border: 1px solid #77BBDD;
   border-top: 0px; }
+  #bd h3.noobs {
+    padding-top: 10px; }
   #bd #messages {
     border: 1px solid #999999;
     background-color: #EEEEEE;
