--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -6,7 +6,7 @@
     = render :partial => 'leaderboard', :locals => { :people => @rankings, :start_at => 1 }
 
   - if @newbies.size > 0
-    %h3.noobs= 'Noobs'[]
+    %h3.noobs= 'Newbies'[]
     = render :partial => 'leaderboard', :locals => { :people => @newbies, :start_at => @rankings.size + 1 }
 
   .columns
