git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@208 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -18,10 +18,11 @@ table {
     #hd #links a {
       color: #FFFFFF; }
     #hd #links #user {
-      display: inline;
-      padding-right: 10px; }
-    #hd #links #languages {
       display: inline; }
+    #hd #links #languages {
+      padding-left: 10px;
+      display: inline;
+      display: none; }
   #hd ul#menu {
     display: block;
     background-color: #77BBDD;
