--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -23,10 +23,11 @@ table
 
     #user
       :display inline
-      :padding-right 10px 
     
     #languages
+      :padding-left 10px 
       :display inline
+      :display none
     
   ul#menu
     :display block
