--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -23,6 +23,8 @@ table
   #links
     :float right
     :padding 21px
+    :padding-bottom 0
+    :padding-left 0
     :color #FFFFFF
 
     a
@@ -91,15 +93,15 @@ h3
 
 #bd
   :padding-top 20px
-  :padding-bottom 20px
+  :padding-bottom 0
   :padding-left 20px
   :padding-right 20px
   :border 1px solid #77BBDD
   :border-top 0px
   :clear both
 
-  h3.noobs
-    :padding-top 20px
+  .bottom_space
+    :padding-bottom 20px
 
   #messages
     :border 1px solid #999999
@@ -128,6 +130,7 @@ h3
       
   table.list
     :width 100%
+    :margin-bottom 20px
 
     th
       :border 0
@@ -189,7 +192,6 @@ h3
 
   .columns
     :clear both
-    :padding-top 20px
 
     .left-column
       :float left
