git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@211 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -19,6 +19,7 @@ table
     :background-image url('../images/header_left.gif')
     :background-repeat no-repeat
     :background-position left top
+    :border-bottom 1px solid #FFFFFF
    
   #links
     :float right
@@ -42,7 +43,6 @@ table
     :display block
     :background-color #77BBDD
     :margin 0
-    :border-top 1px solid #FFFFFF
     :padding 21px
     :padding-top 13px
     :padding-bottom 3px
