git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@212 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/shared/_menu.haml
+++ b/app/views/shared/_menu.haml
@@ -5,3 +5,6 @@
   %li{:class => controller.controller_name == 'people' ? 'current' : ''}= link_to 'People'[], people_path
   - if admin?
     %li{:class => controller.controller_name == 'users' ? 'current' : ''}= link_to 'Users'[], users_path
+
+  .clear
+    %hr    
