--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -39,11 +39,9 @@ table {
     margin: 0;
     padding: 21px;
     padding-top: 13px;
-    padding-bottom: 3px;
-    border-bottom: 1px solid #77BBDD;
+    padding-bottom: 0;
     list-style-type: none;
-    line-height: normal;
-    height: 21px; }
+    line-height: normal; }
     #hd ul#menu li {
       display: inline;
       float: left;
