--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -45,11 +45,9 @@ table
     :margin 0
     :padding 21px
     :padding-top 13px
-    :padding-bottom 3px
-    :border-bottom 1px solid #77BBDD
+    :padding-bottom 0
     :list-style-type none
     :line-height normal
-    :height 21px
     
     li
       :display inline
