git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@213 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -41,7 +41,8 @@ table {
     padding-top: 13px;
     padding-bottom: 0;
     list-style-type: none;
-    line-height: normal; }
+    line-height: normal;
+    height: 25px; }
     #hd ul#menu li {
       display: inline;
       float: left;
