--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -48,6 +48,7 @@ table
     :padding-bottom 0
     :list-style-type none
     :line-height normal
+    :height 25px
     
     li
       :display inline
