git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@214 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -44,11 +44,11 @@ table
     :background-color #77BBDD
     :margin 0
     :padding 21px
-    :padding-top 13px
+    :padding-top 10px
     :padding-bottom 0
     :list-style-type none
     :line-height normal
-    :height 25px
+    :height 26px
     
     li
       :display inline
@@ -64,6 +64,7 @@ table
         :border-bottom none
         :text-decoration none
         :color #FFFFFF
+        :font-size 13px
         :font-weight bold
         :display block
         :float left
