Padding on sidebar bottom
git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@218 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -172,7 +172,8 @@ h3 {
     position: relative;
     top: 2px; }
   #bd #sidebar {
-    width: 220px; }
+    width: 220px;
+    padding-bottom: 20px; }
     #bd #sidebar h2 {
       margin: 0;
       padding: 0;
