git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@222 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -1,1 +1,4 @@
-= graph(formatted_person_games_url(@person.id, :graph))
+- title 'Rating chart for {name}'[:rating_chart_for, @person.full_name]
+
+%h3= 'Rating chart for {name}'[:rating_chart_for, @person.full_name]
+#graph= graph(formatted_person_games_url(@person.id, :graph))
