--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -260,6 +260,13 @@ h3
       :position relative
       :top 3px
 
+  tr.person
+    .admin
+      :display inline
+
+  #chart
+    :margin-bottom 20px
+
 #ft
   :color #999999
   :text-align center
