--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -1,4 +1,4 @@
-- title 'Rating chart for {name}'[:rating_chart_for, @person.full_name]
+- title 'Ranking chart for {name}'[:ranking_chart_for, @person.full_name]
 
-%h3= 'Rating chart for {name}'[:rating_chart_for, @person.full_name]
+%h3= 'Ranking chart for {name}'[:ranking_chart_for, @person.full_name]
 #graph= graph(formatted_person_games_url(@person.id, :graph))
