--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -264,6 +264,13 @@ h3
     .admin
       :display inline
 
+  a.person
+    :color #000000
+    :text-decoration none
+
+    &:hover
+      :text-decoration underline
+
   #chart
     :margin-bottom 20px
 
