--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -167,6 +167,8 @@ h3
     :padding-bottom 10px
 
   .game
+    :margin-bottom 20px
+
     label
       :font-weight bold
 
@@ -264,7 +266,7 @@ h3
     .admin
       :display inline
 
-  a.person
+  a.person, a.game
     :color #000000
     :text-decoration none
 
