--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -25,7 +25,7 @@
     #leader
       %h3= 'Leader'[]
       .mugshot= image_tag @leader.mugshot.public_filename(:thumb), :alt => @leader.full_name if @leader.mugshot
-      = @leader.full_name
+      = person_link_full @leader
 
     #counts
       %p
