Person-page clean-up
git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@242 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/_leaderboard.haml
+++ b/app/views/dashboard/_leaderboard.haml
@@ -21,7 +21,7 @@
       %td= person.ranking
       %td= person.memberships_count
       %td= person.games_won
-      %td= person.memberships_count - person.games_won
+      %td= person.games_lost
       %td= person.winning_percentage.to_s + '%'
       %td= person.goals_for
       %td= person.goals_against
