--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -2,3 +2,27 @@
 
 %h3= 'Ranking chart for {name}'[:ranking_chart_for, @person.full_name]
 #graph= graph(formatted_person_games_url(@person.id, :graph))
+
+- content_for :sidebar do
+  .mugshot= image_tag @person.mugshot.public_filename(:thumb), :alt => @person.full_name if @person.mugshot
+
+  #counts
+    %p
+      %label= 'Played games'[] + ':'
+      = @person.memberships_count
+    
+    %p
+      %label= 'Games won'[] + ':'
+      = @person.games_won
+
+    %p
+      %label= 'Games lost'[] + ':'
+      = @person.games_lost
+
+    %p
+      %label= 'Goals for'[] + ':'
+      = @person.goals_for
+
+    %p
+      %label= 'Goals against'[] + ':'
+      = @person.goals_against
