--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -273,8 +273,15 @@ h3
     &:hover
       :text-decoration underline
 
-  #chart
-    :margin-bottom 20px
+  #graph
+    :margin-top 10px
+
+    #chart
+      :margin-bottom 20px
+
+  .person
+    .mugshot
+      :padding-bottom 10px
 
 #ft
   :color #999999
