git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@247 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -6,7 +6,7 @@
 - content_for :sidebar do
   .person
     - if @person.mugshot
-      .mugshot= image_tag @person.mugshot.public_filename(:portrait), :alt => @person.full_name
+      .mugshot= image_tag @person.mugshot.public_filename(:thumb), :alt => @person.full_name
 
     #counts
       %p
