git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@248 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -28,3 +28,11 @@
       %p
         %label= 'Goals against'[] + ':'
         = @person.goals_against
+
+      %p
+        %label= 'All time high'[] + ':'
+        = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
+
+      %p
+        %label= 'All time low'[] + ':'
+        = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
