git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@249 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -30,9 +30,9 @@
         = @person.goals_against
 
       %p
-        %label= 'All time high'[] + ':'
+        %label= 'Highest ranking'[] + ':'
         = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
 
       %p
-        %label= 'All time low'[] + ':'
+        %label= 'Lowest ranking'[] + ':'
         = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
