--- a/app/views/people/show.haml
+++ b/app/views/people/show.haml
@@ -9,30 +9,35 @@
       .mugshot= image_tag @person.mugshot.public_filename(:thumb), :alt => @person.full_name
 
     #counts
+      %p.position
+        %label= 'Position'[] + ':'
+        = @person.position
+
       %p
         %label= 'Played games'[] + ':'
         = @person.memberships_count
-    
-      %p
-        %label= 'Games won'[] + ':'
-        = @person.games_won
+  
+      %table.for_against
+        %tr
+          %td.for
+            %label= 'Games won'[] + ':'
+            = @person.games_won
+          %td.against
+            %label= 'Games lost'[] + ':'
+            = @person.games_lost
 
-      %p
-        %label= 'Games lost'[] + ':'
-        = @person.games_lost
+        %tr
+          %td.for
+            %label= 'Goals for'[] + ':'
+            = @person.goals_for
+          %td.against
+            %label= 'Goals against'[] + ':'
+            = @person.goals_against
 
-      %p
-        %label= 'Goals for'[] + ':'
-        = @person.goals_for
-
-      %p
-        %label= 'Goals against'[] + ':'
-        = @person.goals_against
-
-      %p
-        %label= 'Highest ranking'[] + ':'
-        = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
-
-      %p
-        %label= 'Lowest ranking'[] + ':'
-        = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
+        %tr
+          %td.for
+            %label= 'Best ranking'[] + ':'
+            = link_to @all_time_high.current_ranking, game_path(@all_time_high.team.game), :class => 'game'
+          %td.against
+            %label= 'Worst ranking'[] + ':'
+            = link_to @all_time_low.current_ranking, game_path(@all_time_low.team.game), :class => 'game'
