--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -274,14 +274,43 @@ h3
       :text-decoration underline
 
   #graph
-    :margin-top 10px
+    :margin-top 1em
 
     #chart
       :margin-bottom 20px
 
   .person
     .mugshot
-      :padding-bottom 10px
+      :padding-bottom 1em
+      
+    p.position
+      :padding 0
+      :padding-top 10px
+      :padding-bottom 4px
+      :margin-bottom 1em
+      :border-top 1px solid #EEEEEE
+      :border-bottom 1px solid #EEEEEE
+      :font-size 250%
+      :font-weight bold
+      :text-align center
+      
+      label
+        :font-size 13px
+      
+    table.for_against
+      :width 100%
+
+      td
+        :border 0
+        :padding 0
+        :margin 0
+        :padding-right 2px
+        :padding-bottom 1em
+
+      td.against
+        :padding-right 0
+        :padding-left 2px
+        :text-align right
 
 #ft
   :color #999999
